--- a/SWSU_Randomizer/App.xaml
+++ b/SWSU_Randomizer/App.xaml
@@ -5,5 +5,6 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
+        <Style x:Key="WhiteGrid" TargetType="{x:Type Grid}"/>
     </Application.Resources>
 </Application>
