--- a/SWSU_Randomizer/MainWindow.xaml
+++ b/SWSU_Randomizer/MainWindow.xaml
@@ -121,9 +121,12 @@
         <GridSplitter Grid.Row="1" ShowsPreview="False" Height="3" Foreground="#FF189E2D" 
                       BorderBrush="#FF53BD2F"
                       HorizontalAlignment="Stretch"  Grid.ColumnSpan="2"></GridSplitter>
-        <Grid x:Name="topTimer" Background="#FF2B0C0C" Margin="81,0,0,0">
-            <TextBlock x:Name="Randomizer_Textblock" TextWrapping="Wrap" Text="Введите диапазон чисел" FontSize="36" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
+        <Grid x:Name="topTimer" Background="#FFACEEEF" Margin="81,0,0,0">
+            <TextBlock x:Name="Randomizer_Textblock" TextWrapping="Wrap" Text="Введите диапазон чисел" FontSize="36" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
             <!--Круговой progress bar-->
+            <Grid HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="200" MinHeight="100" Background="White">
+                <TextBlock x:Name="TextBlockRandom" Text="0000" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="144" Foreground="#FF0B86BB"/>
+            </Grid>
         </Grid>
 
         <Grid  Margin="81,4,0,0" Grid.Row="1" Grid.ColumnSpan="1" ScrollViewer.VerticalScrollBarVisibility="Disabled">
@@ -146,19 +149,19 @@
                     <!--Первая область с вводом числа-->
                     <Grid DockPanel.Dock="Left" Background="#FF9C6E37">
                         <TextBlock Text="Введите начало диапазона" VerticalAlignment="Top" FontSize="16" HorizontalAlignment="Center"/>
-                        <TextBox HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="0,20,0,10"/>
+                        <TextBox x:Name="textBox1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="1" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch" Margin="0,20,0,10" MinWidth="40" PreviewTextInput="textBox1_PreviewTextInput"/>
                     </Grid>
                     <!--Область с кнопкой рассчета-->
                     <Grid HorizontalAlignment="Center" DockPanel.Dock="Left" Background="#FF3DB38A" Margin="20,0,0,0">
-                        
-<Button x:Name="Start_button" Content="Определить" HorizontalAlignment="Center" 
+
+                        <Button x:Name="Start_button" Content="Старт" HorizontalAlignment="Center" 
                 VerticalAlignment="Bottom"
-                IsEnabled="False" Margin="10,0,10,10" Grid.Column="1"/>
+                IsEnabled="True" Margin="10,0,10,10" Grid.Column="1" Click="Start_button_Click" MinWidth="100"/>
                     </Grid>
 
                     <Grid DockPanel.Dock="Right" Background="#FF9045C7" Margin="20,0,0,0">
                         <TextBlock Text="Введите начало диапазона" VerticalAlignment="Top" FontSize="16" HorizontalAlignment="Center"/>
-                        <TextBox HorizontalAlignment="Center" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Margin="0,0,0,10"/>
+                        <TextBox x:Name="textBox2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="1000" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Margin="0,0,0,10" PreviewTextInput="textBox2_PreviewTextInput"/>
                     </Grid>
 
                 </DockPanel>
